// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TransactionListTop should render (with ENABLE_VISA_PROGRAM) 1`] = `
[
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "borderRadius": 16,
        },
        {
          "marginBottom": 10,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 10,
        },
        {
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(255, 255, 255, .1)",
          "borderRadius": 16,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, .1)",
            "borderRadius": 100,
            "flexDirection": "row",
            "flexShrink": 1,
            "marginRight": 10,
            "opacity": 1,
            "paddingHorizontal": 15,
            "paddingVertical": 5,
          }
        }
      >
        <View>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={36}
            bbWidth={36}
            focusable={false}
            height={36}
            meetOrSlice={0}
            minX={-8}
            minY={-8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "left": -8,
                  "position": "absolute",
                  "top": -8,
                  "transform": [
                    {
                      "rotateZ": "-90deg",
                    },
                  ],
                },
                {
                  "flex": 0,
                  "height": 36,
                  "width": 36,
                },
              ]
            }
            transform={
              [
                {
                  "rotateZ": "-90deg",
                },
              ]
            }
            vbHeight={36}
            vbWidth={36}
            width={36}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                opacity={1}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeDasharray",
                    "strokeDashoffset",
                    "strokeLinecap",
                  ]
                }
                r={12}
                stroke={
                  {
                    "payload": 4278251938,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    75.39822368615503,
                    75.39822368615503,
                  ]
                }
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeWidth={4}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <View
            style={
              {
                "height": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 5,
                "marginTop": 0,
                "width": 20,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#000000",
                  "borderRadius": 10,
                  "elevation": 0,
                  "height": 20,
                  "shadowColor": "#000000",
                  "shadowOffset": {
                    "height": 3,
                    "width": -3,
                  },
                  "shadowOpacity": 0.6,
                  "shadowRadius": 4,
                  "width": 20,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                  ]
                }
              >
                <FastImageView
                  defaultSource={null}
                  resizeMode="cover"
                  source={
                    {
                      "uri": "https://content.edge.app/currencyIconsV3/bitcoin/bitcoin.png",
                    }
                  }
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.65}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 20,
                "includeFontPadding": false,
              },
              {
                "flexShrink": 1,
                "fontSize": 15,
                "lineHeight": 29,
              },
              null,
            ]
          }
        >
          wallet name
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "center",
            "margin": -15,
            "marginRight": -15,
            "opacity": 1,
            "padding": 15,
            "paddingRight": 10,
          }
        }
        testID="gearIcon"
      >
        <Text
          accessibilityHint="Wallet settings"
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 20,
              },
              undefined,
              {
                "fontFamily": "Entypo",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
          }
        }
      >
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 20,
                "includeFontPadding": false,
              },
              {
                "flexShrink": 1,
                "fontFamily": "Quicksand-Medium",
                "fontSize": 34,
              },
              null,
            ]
          }
        >
          0.00123123 BTC
        </Text>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#00f1a2",
                "fontSize": 23,
              },
              {
                "alignSelf": "center",
                "flexGrow": 1,
                "marginLeft": 10,
                "marginRight": 0,
                "textShadowColor": "rgba(0, 0, 0, 0.514)",
                "textShadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "textShadowRadius": 3,
              },
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        accessible={true}
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "fontSize": 25,
            },
            null,
          ]
        }
      >
        $0.00 USD
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "flexDirection": "row",
        "flexShrink": 1,
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexShrink": 1,
          "justifyContent": "center",
          "marginHorizontal": -20,
          "marginVertical": 10,
          "opacity": 1,
          "paddingHorizontal": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexShrink": 1,
            "justifyContent": "center",
            "marginBottom": 5,
            "paddingTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 29.5,
              "height": 59,
              "justifyContent": "center",
              "width": 59,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 39,
                },
                undefined,
                {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        Receive
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexShrink": 1,
          "justifyContent": "center",
          "marginHorizontal": -20,
          "marginVertical": 10,
          "opacity": 1,
          "paddingHorizontal": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexShrink": 1,
            "justifyContent": "center",
            "marginBottom": 5,
            "paddingTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 29.5,
              "height": 59,
              "justifyContent": "center",
              "width": 59,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 39,
                },
                undefined,
                {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        Send
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexShrink": 1,
          "justifyContent": "center",
          "marginHorizontal": -20,
          "marginVertical": 10,
          "opacity": 1,
          "paddingHorizontal": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexShrink": 1,
            "justifyContent": "center",
            "marginBottom": 5,
            "paddingTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 29.5,
              "height": 59,
              "justifyContent": "center",
              "width": 59,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 39,
                },
                undefined,
                {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        Trade
      </Text>
    </View>
  </View>,
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "borderRadius": 16,
        },
        {
          "marginBottom": 10,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 10,
        },
        {
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(255, 255, 255, .1)",
          "borderRadius": 16,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "height": 39,
              "margin": 10,
              "width": 39,
            },
          ]
        }
      >
        <FastImageView
          defaultSource={null}
          resizeMode="contain"
          source={
            {
              "uri": "https://content.edge.app/currencyIconsV3/bitcoin/bitcoin.png",
            }
          }
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={0}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "marginLeft": 10,
            },
            null,
          ]
        }
      >
        Buy Prepaid Visa® Cards
      </Text>
    </View>
  </View>,
]
`;

exports[`TransactionListTop should render 1`] = `
[
  <View
    style={
      [
        {
          "alignSelf": "stretch",
          "borderRadius": 16,
        },
        {
          "marginBottom": 10,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 10,
        },
        {
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(255, 255, 255, .1)",
          "borderRadius": 16,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, .1)",
            "borderRadius": 100,
            "flexDirection": "row",
            "flexShrink": 1,
            "marginRight": 10,
            "opacity": 1,
            "paddingHorizontal": 15,
            "paddingVertical": 5,
          }
        }
      >
        <View>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={36}
            bbWidth={36}
            focusable={false}
            height={36}
            meetOrSlice={0}
            minX={-8}
            minY={-8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "left": -8,
                  "position": "absolute",
                  "top": -8,
                  "transform": [
                    {
                      "rotateZ": "-90deg",
                    },
                  ],
                },
                {
                  "flex": 0,
                  "height": 36,
                  "width": 36,
                },
              ]
            }
            transform={
              [
                {
                  "rotateZ": "-90deg",
                },
              ]
            }
            vbHeight={36}
            vbWidth={36}
            width={36}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGCircle
                cx={10}
                cy={10}
                fill={
                  {
                    "payload": 0,
                    "type": 0,
                  }
                }
                opacity={1}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeDasharray",
                    "strokeDashoffset",
                    "strokeLinecap",
                  ]
                }
                r={12}
                stroke={
                  {
                    "payload": 4278251938,
                    "type": 0,
                  }
                }
                strokeDasharray={
                  [
                    75.39822368615503,
                    75.39822368615503,
                  ]
                }
                strokeDashoffset={null}
                strokeLinecap={1}
                strokeWidth={4}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <View
            style={
              {
                "height": 20,
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 5,
                "marginTop": 0,
                "width": 20,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#000000",
                  "borderRadius": 10,
                  "elevation": 0,
                  "height": 20,
                  "shadowColor": "#000000",
                  "shadowOffset": {
                    "height": 3,
                    "width": -3,
                  },
                  "shadowOpacity": 0.6,
                  "shadowRadius": 4,
                  "width": 20,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                  ]
                }
              >
                <FastImageView
                  defaultSource={null}
                  resizeMode="cover"
                  source={
                    {
                      "uri": "https://content.edge.app/currencyIconsV3/bitcoin/bitcoin.png",
                    }
                  }
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.65}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 20,
                "includeFontPadding": false,
              },
              {
                "flexShrink": 1,
                "fontSize": 15,
                "lineHeight": 29,
              },
              null,
            ]
          }
        >
          wallet name
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "center",
            "margin": -15,
            "marginRight": -15,
            "opacity": 1,
            "padding": 15,
            "paddingRight": 10,
          }
        }
        testID="gearIcon"
      >
        <Text
          accessibilityHint="Wallet settings"
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 20,
              },
              undefined,
              {
                "fontFamily": "Entypo",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
          }
        }
      >
        <Text
          accessible={true}
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 20,
                "includeFontPadding": false,
              },
              {
                "flexShrink": 1,
                "fontFamily": "Quicksand-Medium",
                "fontSize": 34,
              },
              null,
            ]
          }
        >
          0.00123123 BTC
        </Text>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#00f1a2",
                "fontSize": 23,
              },
              {
                "alignSelf": "center",
                "flexGrow": 1,
                "marginLeft": 10,
                "marginRight": 0,
                "textShadowColor": "rgba(0, 0, 0, 0.514)",
                "textShadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "textShadowRadius": 3,
              },
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        accessible={true}
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "fontSize": 25,
            },
            null,
          ]
        }
      >
        $0.00 USD
      </Text>
    </View>
  </View>,
  <View
    style={
      {
        "flexDirection": "row",
        "flexShrink": 1,
        "justifyContent": "space-evenly",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexShrink": 1,
          "justifyContent": "center",
          "marginHorizontal": -20,
          "marginVertical": 10,
          "opacity": 1,
          "paddingHorizontal": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexShrink": 1,
            "justifyContent": "center",
            "marginBottom": 5,
            "paddingTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 29.5,
              "height": 59,
              "justifyContent": "center",
              "width": 59,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 39,
                },
                undefined,
                {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        Receive
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexShrink": 1,
          "justifyContent": "center",
          "marginHorizontal": -20,
          "marginVertical": 10,
          "opacity": 1,
          "paddingHorizontal": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexShrink": 1,
            "justifyContent": "center",
            "marginBottom": 5,
            "paddingTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 29.5,
              "height": 59,
              "justifyContent": "center",
              "width": 59,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 39,
                },
                undefined,
                {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        Send
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexShrink": 1,
          "justifyContent": "center",
          "marginHorizontal": -20,
          "marginVertical": 10,
          "opacity": 1,
          "paddingHorizontal": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexShrink": 1,
            "justifyContent": "center",
            "marginBottom": 5,
            "paddingTop": 10,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255, 255, 255, .1)",
              "borderRadius": 29.5,
              "height": 59,
              "justifyContent": "center",
              "width": 59,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 39,
                },
                undefined,
                {
                  "fontFamily": "Ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <Text
        adjustsFontSizeToFit={true}
        minimumFontScale={0.65}
        numberOfLines={1}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Regular",
              "fontSize": 20,
              "includeFontPadding": false,
            },
            {
              "textAlign": "center",
            },
            null,
          ]
        }
      >
        Trade
      </Text>
    </View>
  </View>,
]
`;
